crates/nuff_linter/src/snapshots/nuff_linter__linter__tests__semantic_syntax_error_multiple_case_assignment.py_3.10.snap
---
source: crates/nuff_linter/src/linter.rs
---
invalid-syntax: multiple assignments to name `a` in pattern
 --> resources/test/fixtures/semantic_errors/multiple_case_assignment.py:2:14
  |
1 | match x:
2 |     case [a, a]:
  |              ^
3 |         pass
4 |     case _:
  |
