crates/nuff_linter/src/snapshots/nuff_linter__linter__tests__semantic_syntax_error_single_starred_assignment.py_3.10.snap
---
source: crates/nuff_linter/src/linter.rs
---
invalid-syntax: starred assignment target must be in a list or tuple
 --> resources/test/fixtures/semantic_errors/single_starred_assignment.py:1:1
  |
1 | *a = [1, 2, 3, 4]
  | ^^
