crates/nuff_linter/src/snapshots/nuff_linter__linter__tests__undefined_name.snap
---
source: crates/nuff_linter/src/linter.rs
---
F821 Undefined name `undefined`
 --> undefined_name.ipynb:cell 3:1:7
  |
1 | print(undefined)
  |       ^^^^^^^^^
