crates/nuff_linter/src/snapshots/nuff_linter__linter__tests__vscode_language_id.snap
---
source: crates/nuff_linter/src/linter.rs
---
F401 [*] `os` imported but unused
 --> vscode_language_id.ipynb:cell 3:1:8
  |
1 | import os
  |        ^^
2 |
3 | print("hello world")
  |
help: Remove unused import: `os`
 ::: cell 3
  |
  - import os
1 |
  |
